# yolov8

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: yolov8_pose_mnn.hpp
python/: construction_pose.py
src/: yolov8_pose_mnn.cpp
